<resources>
    <string name="app_name">JolyBell Unofficial</string>

    <string name="welcome_slogan">ЕСТЬ ТОЛЬКО БЕЛЫЙ И ЧЕРНЫЙ. ОСТАЛЬНОЕ - ОТТЕНКИ</string>
    <string name="welcome_slogan_rect_words">БЕЛЫЙ</string>
    <string name="preview_description">Тонкая. Легкая. Черная.\n\n\nФутболка линейки B.O.M.J - первая единица контрбрендовой линии одежды. Потрясающие качество в совместительстве с утонченным подходом к деталям, которым не могут похвастаться именитые раздутые фирмы.\n\n\nТкань сорта пенье\n\n\nСостав: 95% cotton, 5% spandex. Плотность 170 г/м²</string>
    <string name="product_btn_1">РАЗМЕРНАЯ СЕТКА</string>
    <string name="product_btn_2">УХОД ЗА ВЕЩЬЮ</string>
    <string name="add_to_cart">ДОБАВИТЬ В КОРЗИНУ</string>
    <string name="email">ЭЛ. ПОЧТА</string>
    <string name="password_hint">ПАРОЛЬ</string>
    <string name="confirm_password_hint">ПОТВЕРДИТЕ ПАРОЛЬ</string>
    <string name="sign_in_text">ВОЙТИ</string>
    <string name="patronymic">ОТЧЕСТВО</string>
    <string name="firstname">ИМЯ</string>
    <string name="lastname">ФАМИЛИЯ</string>
    <string name="phone">ТЕЛЕФОН</string>
    <string name="country">СТРАНА</string>
    <string name="city">ГОРОД</string>
    <string name="region">КРАЙ/ОБЛАСТЬ/РЕГИОН</string>
    <string name="address">УЛИЦА, ДОМ, КВАРТИРА</string>
    <string name="post_index">ПОЧТОВЫЙ ИНДЕКС</string>
    <string name="change_password">ИЗМЕНИТЬ ПАРОЛЬ</string>
    <string name="exit">ВЫХОД ИЗ АККАУНТА</string>
    <string name="dont_save">Не сохранять</string>
</resources>