<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/futurabookc"
            android:gravity="center"
            android:text="Персональный данные"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp">

        </com.jolybell.jolybellunofficial.views.EditableTextView>

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp" />

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/patronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:hint="@string/patronymic"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp" />

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColorHint="@color/hint"
            android:textSize="18sp" />

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/futurabookc"
            android:gravity="center"
            android:text="Адрес доставки"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:drawableRight="@drawable/open"
            android:enabled="false"
            android:hint="@string/country"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp">

        </com.jolybell.jolybellunofficial.views.EditableTextView>

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp">

        </com.jolybell.jolybellunofficial.views.EditableTextView>

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/region"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp"></com.jolybell.jolybellunofficial.views.EditableTextView>

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp"></com.jolybell.jolybellunofficial.views.EditableTextView>

        <com.jolybell.jolybellunofficial.views.EditableTextView
            android:id="@+id/post_index"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:enabled="false"
            android:hint="@string/post_index"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:textSize="18sp"></com.jolybell.jolybellunofficial.views.EditableTextView>

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/futuramediumc"
            android:text="@string/change_password"
            android:textSize="18sp"
            app:cornerRadius="16dp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/futuramediumc"
            android:text="@string/exit"
            android:textSize="18sp"
            app:cornerRadius="16dp" />
    </LinearLayout>
</ScrollView>