<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".screens.ProductActivity"
    tools:theme="@style/ProductActivityLight">

    <com.jolybell.jolybellunofficial.views.TopAnimationLogo
        android:id="@+id/top_logo_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:jumpToEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jolybell.jolybellunofficial.views.TopTitleScreen
        android:id="@+id/topTitleScreen"
        style="?attr/theme_top_title_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_logo_product" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTitleScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="180dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pager_images"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.jolybell.jolybellunofficial.views.DotsTabLayout
                    android:id="@+id/dots"
                    style="?attr/theme_dots_tab_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabRippleColor="@null" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                app:cardBackgroundColor="?attr/cardBackgroundColor"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/futurademic"
                    android:textColor="?attr/priceColor"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="22dp"
                android:fontFamily="@font/futurabookc"
                android:gravity="center"
                android:text="@string/preview_description"
                android:textColor="?attr/colorDescription"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/product_btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/text_btn_product"
                    app:strokeWidth="1.5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="14dp"
                        android:fontFamily="@font/futuramediumc"
                        android:text="@string/product_btn_1"
                        android:textColor="@color/text_btn_product" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/product_btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/text_btn_product"
                    app:strokeWidth="1.5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="14dp"
                        android:fontFamily="@font/futuramediumc"
                        android:text="@string/product_btn_2"
                        android:textColor="@color/text_btn_product" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.jolybell.jolybellunofficial.views.TextViewWordSquare
                android:id="@+id/textViewWordSquare2"
                style="?attr/theme_text_square"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:rect_words="ПОКУПКЕ"
                app:text_size="14sp"
                app:words="РЕКОМЕНДУЕМ К ПОКУПКЕ" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_recommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="18dp"
                android:overScrollMode="never">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/background"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/lineColor" />

        <com.jolybell.jolybellunofficial.views.SizesProductView
            android:id="@+id/sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:overScrollMode="never"
            android:visibility="visible"
            app:tabPaddingEnd="6dp"
            app:tabPaddingStart="6dp"
            app:tabRippleColor="@null"
            app:theme_sizes="?attr/theme_sizes" />

        <androidx.cardview.widget.CardView
            android:id="@+id/add_to_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="22dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp">

                <com.jolybell.jolybellunofficial.views.ProductCounterView
                    android:id="@+id/counter"
                    style="?attr/theme_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/futuramediumc"
                    android:gravity="center"
                    android:text="@string/add_to_cart"
                    android:textColor="?attr/priceColor"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>